fixed white space at the top of the page, fixed carousel in home page, improved responsiveness of grid

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -13,7 +13,7 @@ body {
   text-align: center;
   top: 50%;
   left: 50%;
-  /* padding-top: 50px; */
+  padding: 20px;
 }
 
 .topnav {
@@ -42,97 +42,32 @@ body {
   margin-right: 0;
 }
 
-/* * {
-  box-sizing: border-box;
-}
-body {
-  font-family: Verdana, sans-serif;
-}
-.mySlides {
-  display: none;
-}
-img {
-  vertical-align: middle;
-}
-
-/* Slideshow container */
-.slideshow-container {
-  max-width: 1000px;
-  position: relative;
-  margin: auto;
-}
-
-/* Caption text */
-.text {
-  color: #f2f2f2;
-  font-size: 15px;
-  padding: 8px 12px;
-  position: absolute;
-  bottom: 8px;
-  width: 100%;
-  text-align: center;
-}
-
-/* Number text (1/3 etc) */
-.numbertext {
-  color: #f2f2f2;
-  font-size: 12px;
-  padding: 8px 12px;
-  position: absolute;
-  top: 0;
-}
-
-/* The dots/bullets/indicators */
-.dot {
-  height: 15px;
-  width: 15px;
-  margin: 0 2px;
-  background-color: #bbb;
-  border-radius: 50%;
-  display: inline-block;
-  transition: background-color 0.6s ease;
-}
-
-.active {
-  background-color: #717171;
-}
-
-/* Fading animation */
-.fade {
-  -webkit-animation-name: fade;
-  -webkit-animation-duration: 1.5s;
-  animation-name: fade;
-  animation-duration: 1.5s;
-}
-
-@-webkit-keyframes fade {
-  from {
-    opacity: 0.4;
-  }
-  to {
-    opacity: 1;
-  }
-}
-
-@keyframes fade {
-  from {
-    opacity: 0.4;
-  }
-  to {
-    opacity: 1;
-  }
-}
-
 .recipe-title {
   font-weight: bold;
 }
 
 .grid-container {
   display: grid;
+  grid-template-columns: auto auto auto auto;
   background-color: #488345;
-  padding: 10px;
-  grid-gap: 10px;
-  grid-template-columns: auto auto auto;
+}
+
+@media (max-width: 2000px) {
+  .grid-container {
+    grid-template-columns: auto auto auto;
+  }
+}
+
+@media (max-width: 1500px) {
+  .grid-container {
+    grid-template-columns: auto auto;
+  }
+}
+
+@media (max-width: 1000px) {
+  .grid-container {
+    grid-template-columns: auto;
+  }
 }
 
 .grid-item {
@@ -140,4 +75,27 @@ img {
   text-align: center;
   padding: 20px;
   font-size: 30px;
+  margin: 5px;
+}
+
+/* Slideshow container */
+.slideshow-container {
+  position: relative;
+  background: #f1f1f1f1;
+}
+
+/* Slides */
+.mySlides {
+  padding: 80px;
+  text-align: center;
+}
+
+/* Add an italic font style to all quotes */
+q {
+  font-style: italic;
+}
+
+/* Add a blue color to the author */
+.author {
+  color: cornflowerblue;
 }
